--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FGCAPIContext": "Server=(localdb)\\mssqllocaldb;Database=FGCAPIContext-d06cb8a1-8829-41d0-a3de-c244bed21e81;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
