Troque o Login para usar o identity, agora vou usar o jwt

--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -1,12 +1,13 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+{  
+ "Logging": {  
+   "LogLevel": {  
+     "Default": "Information",  
+     "Microsoft.AspNetCore": "Warning"  
+   }  
+ },  
+ "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FGCAPIContext": "Server=(localdb)\\mssqllocaldb;Database=FGCAPIContext-d06cb8a1-8829-41d0-a3de-c244bed21e81;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "DbIdentityLoginContext": "Data Source=LocalHost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
+    "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"
+  }  
 }
