Criado testes unitários para as entidades e objetos de valor do Domínio. [RED]

--- a/FCG.Tests.Domain/FCG.Tests.Domain/FCG.Tests.Domain.csproj
+++ b/FCG.Tests.Domain/FCG.Tests.Domain/FCG.Tests.Domain.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\FCG.Domain\FCG.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
