Aprimoramento da validação e estrutura na aplicação FCG
Arquivos de solução e projeto atualizados para `FCG.Tests.Domain` e `FGC.API` para incluir novas referências e o framework alvo `net8.0`.
Classes `Game` e `User` modificadas para adicionar validação em construtores, incluindo geração automática de ID e verificação de senha.
Enum `UserRole` definido e interfaces de repositório implementadas para operações CRUD em `Game` e `User`.
Objetos de valor criados para `Email` e `Password` com lógica de validação.
Testes unitários adicionados e atualizados para `Game`, `User`, `Email` e `Password` para garantir a funcionalidade adequada.
RolesController`, `UsersController` e `ExceptionMiddleware` atualizados para melhor manuseio e diretivas necessárias.

--- a/FCG.Tests.Domain/FCG.Tests.Domain.csproj
+++ b/FCG.Tests.Domain/FCG.Tests.Domain.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FCG.Domain\FCG.Domain.csproj" />
+    <ProjectReference Include="..\FCG.Domain\FCG.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
