Adicionar autenticação com suporte a JWT no UsersController
Implementada a funcionalidade de login de usuário no UsersController, incluindo novas dependências para SignInManager, UserManager e JwtService. Atualizado o arquivo FGC.API.csproj para incluir os pacotes necessários para o processamento de identidades e JWT no ASP.NET Core. Registro do JwtService no Program.cs e configuração dos serviços de identidade para requisitos de senha. Modificado o arquivo appsettings.json para as configurações de emissor e público do JWT. Adicionado o LoginDTO para solicitações de login e criado o JwtService para processar a geração de tokens.

--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -9,11 +9,11 @@
 "ConnectionStrings": {  
   "DbIdentityLoginContext": "Data Source=LocalHost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",  
   "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"  
-},  
-"JwtSettings": {  
-  "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",  
-  "Issuer": "YourAppIssuer",  
-  "Audience": "YourAppAudience",
-  "ExpiresInMinutes": 60
-}  
+},
+    "JwtSettings": {
+        "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
+        "Issuer": "fgc.api",
+        "Audience": "fgc.api.usuarios",
+        "ExpiresInMinutes": 60
+    }  
 }
