--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -5,11 +5,11 @@
     "Microsoft.AspNetCore": "Warning"  
   }  
 },  
-"AllowedHosts": "*",  
-"ConnectionStrings": {  
-  "DbIdentityLoginContext": "Data Source=LocalHost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",  
-  "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"  
-},
+"AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DbIdentityLoginContext": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
+        "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"
+    },
     "JwtSettings": {
         "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
         "Issuer": "fgc.api",
