--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -12,8 +12,8 @@
     },
     "JwtSettings": {
         "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
-        "Issuer": "fgc.api",
-        "Audience": "fgc.api.usuarios",
+        "Issuer": "fcg.api",
+        "Audience": "fcg.api.usuarios",
         "ExpiresInMinutes": 60
     }  
 }
