--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -6,10 +6,10 @@
   }  
 },  
 "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DbIdentityLoginContext": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
-        "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"
-    },
+  "ConnectionStrings": {
+    "DbIdentityLoginContext": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
+    "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;Trusted_Connection=True;TrustServerCertificate=True"
+  },
     "JwtSettings": {
         "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
         "Issuer": "fcg.api",
