Refactor database context and update dependencies
Removed the `DbFCGAPIContext` and introduced `FCGContext`
with `DbSet` properties for `User` and `Game`. Updated
Entity Framework Core packages to version 9.0.5 and added
entity configurations in new mapping files. Created initial
migration files for `games` and `users` tables. Updated
connection strings in `appsettings.json` and replaced
`DbIdentityLoginContext` in `Program.cs`. Added
`docker-compose.yml` for SQL Server and API services,
ensuring proper project references in the solution file.

--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -6,10 +6,9 @@
   }  
 },  
 "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DbIdentityLoginContext": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
-        "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;User Id=sa;Password=your_password;"
-    },
+  "ConnectionStrings": {
+    "FCG": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  },
     "JwtSettings": {
         "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
         "Issuer": "fcg.api",
