--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ "main", "master", "develop" ]
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
@@ -15,13 +15,16 @@ jobs:
       - name: Instalar .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x' # Ou a versão que você usa
+          dotnet-version: '8.0.x'
 
       - name: Restaurar dependências
         run: dotnet restore
 
       - name: Build do projeto
         run: dotnet build --configuration Release --no-restore
+
+      - name: List Test Projects
+        run: find . -name "*.csproj" | xargs -I % sh -c 'echo ==== % ====; cat %'
 
       - name: Rodar testes
         run: dotnet test --no-build --verbosity normal
