--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build do projeto
         run: dotnet build --configuration Release --no-restore
 
-      - name: List Test Projects
-        run: find . -name "*.csproj" | xargs -I % sh -c 'echo ==== % ====; cat %'
+      - name: Testes Domain
+        run: dotnet test ./FCG.Tests.Domain/FCG.Tests.Domain.csproj --configuration Release --no-build --verbosity normal
 
-      - name: Rodar testes
-        run: dotnet test --no-build --verbosity normal
+      - name: Testes Infra
+        run: dotnet test ./FCG.Tests.Infra/FCG.Tests.Infra.csproj --configuration Release --no-build --verbosity normal
