Update Dockerfile, Program.cs, and configuration files
- Refined Dockerfile with clearer base image and build stages.
- Configured application to listen on port 80 and added Swagger middleware in Program.cs.
- Reformatted appsettings.json for clarity and updated JWT settings.
- Modified docker-compose.yml to change SQL Server password and expose additional ports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ services:
     sqlserver:
         image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          SA_PASSWORD: "admin"
+          SA_PASSWORD: "FCG@admin"
           ACCEPT_EULA: "Y"
+          MSSQL_PID: "Developer"
         ports:
           - "1433:1433"
     fcg-api:
@@ -11,8 +12,8 @@ services:
           context: .
           dockerfile: ./FGC.API/Dockerfile
         ports:
-          - "5000:80"
+          - "5001:80"
         depends_on:
           - sqlserver
         environment:
-          - ConnectionStrings__FCG=Server=sqlserver;Database=FCG;User=sa;Password=admin;
+          - ConnectionStrings__FCG=Server=sqlserver;Database=FCG;User=sa;Password=FCG@admin;
