--- a/FGC.API/Dockerfile
+++ b/FGC.API/Dockerfile
@@ -1,12 +1,11 @@
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Setup
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
@@ -19,12 +18,12 @@ COPY . .
 WORKDIR "/src/FGC.API"
 RUN dotnet build "./FCG.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Publish
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./FCG.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Run API
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
