Refatoração do gerenciamento de usuários e aprimoramento das respostas da API
- `CreateUserModel` atualizado para usar string para Senha.
- Tratamento de exceções aprimorado em `ExceptionMiddleware`.
- `JwtService` refatorado para recuperar configurações do config.
- Implementação do padrão de repositório em `UserService`.
- Propriedade `Id` tornada não anulável na classe `Game`.
- Classe `User` simplificada com a remoção de objetos de valor.
- Arquivos de projeto atualizados para ASP.NET Core Identity e EF Core.
- Introdução de `DbFCGAPIContext` para gerenciamento de usuários.
- Classes de repositório refatoradas para usar novo contexto.
- Testes atualizados para refletir as alterações do modelo.
- Aprimoramento de `RolesController` e `UsersController` para respostas consistentes.
- Novas classes DTO adicionadas para gerenciamento de funções e registro de usuários.
- Middleware de encapsulamento de resposta introduzido para consistência da API.
- Configuração do Swagger aprimorada para melhor documentação.
- Adicionado `AuthController` para registro e login de usuários.
- Serviços e middleware configurados em `Program.cs`.
- `appsettings.json` atualizado para configurações de JWT e strings de conexão.
- `launchSettings.json` modificado para melhorar a experiência de desenvolvimento.
- Classes utilitárias adicionadas para encapsulamento de respostas e exemplos do Swagger.

--- a/FGC.API/appsettings.json
+++ b/FGC.API/appsettings.json
@@ -1,19 +1,21 @@
-{  
-"Logging": {  
-  "LogLevel": {  
-    "Default": "Information",  
-    "Microsoft.AspNetCore": "Warning"  
-  }  
-},  
-"AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbIdentityLoginContext": "Data Source=localhost;Initial Catalog=DbIdentityLogin;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
-    "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;Trusted_Connection=True;TrustServerCertificate=True"
-  },
-    "JwtSettings": {
+{
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "DbFGCAPIContext": "Server=localhost;Database=DbFGCAPI;Trusted_Connection=True;TrustServerCertificate=True"
+    },
+
+    "Jwt": {
         "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
         "Issuer": "fcg.api",
         "Audience": "fcg.api.usuarios",
         "ExpiresInMinutes": 60
-    }  
+    }
 }
