Update Dockerfile, connection strings, and migrations
- Exposed port 8081 in Dockerfile and corrected working directory.
- Fixed connection ID in `serviceDependencies.json` and `serviceDependencies.local.json`.
- Updated connection string in `appsettings.json` to point to SQL Server instance.
- Added precision to `Price` property in `GameMapping.cs`.
- Created migration `AjusteEmPrice` to alter `Price` column precision in `games` table.
- Updated `FCGDbContextModelSnapshot.cs` to reflect new `Price` precision.
- Changed SQL Server image to "Express" in `docker-compose.yml` and updated connection string.
- Ensured correct project paths in Visual Studio solution file `fcg_tc.sln`.

--- a/FCG.API/appsettings.json
+++ b/FCG.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FCG": "Data Source=localhost;Initial Catalog=FCG;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "FCG": "Data Source=.\\SQLExpress;Initial Catalog=FCG;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   },
   "JwtSettings": {
     "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
