Enhance database seeding and logging functionality
- Added seeding functionality in `Program.cs` with a new using directive and modified startup logic to create and seed the database during development.
- Updated logging configuration in `appsettings.json` to include `Microsoft.EntityFrameworkCore`.
- Introduced `Bogus` package for generating fake data for seeding.
- Increased `Price` property precision in `GameMapping.cs` and updated related migration files.
- Changed SQL Server image in `docker-compose.yml` from `Express` to `Developer` edition and updated the connection string format.
- Created a new `GameSeeding` class to handle the generation and seeding of game data.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       SA_PASSWORD: "FCG@admin"
       ACCEPT_EULA: "Y"
-      MSSQL_PID: "Express"
+      MSSQL_PID: "Developer"
     ports:
       - "1433:1433"
   fcg-api:
@@ -17,4 +17,4 @@ services:
       - sqlserver
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__FCG: "Server=sqlserver;Database=FCG;User=sa;Password=FCG@admin;Initial Catalog=FCG;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+      ConnectionStrings__FCG: "Server=sqlserver;Initial Catalog=FCG;User Id=sa;Password=FCG@admin;TrustServerCertificate=true"
