modificações relacionadas ao swagger e funcionalidades API

--- a/FCG.API/appsettings.Development.json
+++ b/FCG.API/appsettings.Development.json
@@ -1,8 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.EntityFrameworkCore": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=FCG;User Id=sa;Password=FCG@admin;TrustServerCertificate=True;"
+    },
+    "JwtSettings": {
+        "Key": "maisValeUmaPedraNoCaminhoQueDuasNoRim",
+        "Issuer": "fcg.api",
+        "Audience": "fcg.api.usuarios",
+        "ExpiresInMinutes": 60
     }
-  }
 }
